--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,12 @@
-<h1>This is the footer</h1>
+<footer>
+    <div>
+        <a href="">
+            <img class="maps" src="../images/maps.jpg" alt="mapa">
+        </a>
+    </div>
+    <div>
+        <h3>Contact us</h3>
+        <p>+1 951 1457 453</p>
+        <p>support@wcommerce.com</p>
+    </div>
+</footer>
