--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,9 @@
-<nav>
+<nav class="primary-nav">
     <ul>
-        <li>Ofertas</li>
-        <li>Categorías</li>
-        <li>Foro de Preguntas</li>
-        <li>Contactanos</li>
-        <li>Soporte</li>
+        <li><a href="">Ofertas</a></li>
+        <li><a href="">Categorías</a></li>
+        <li><a href="">Foro de Preguntas</a></li>
+        <li><a href="">Contactanos</a></li>
+        <li><a href="">Soporte</a></li>
     </ul>
 </nav>
