--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,49 +1,18 @@
-<h1>Inicio del Body - Angello Ruiz and Alexandra Fernandez</h1>
 <div class="hero-banner">
     <picture>
-        <img src="" alt="This is the hero banner">
+        <img src="../images/hero-img.jpg" alt="This is the hero banner">
     </picture>
-    <h3>Anuncio de promociones dentro del Hero Image</h3>
+    <h3>Tenemos muchas promociones cada mes!</h3>
 </div>
 <div class="categorias">
-    <section>
-        <picture>
-            <img src="" alt="imagen de categoría">
-        </picture>
-        <h4>Categoria 1</h4>
-    </section>
-    <section>
-        <h1>Categorías</h1>
-        <picture>
-            <img src="" alt="imagen de categoría">
-        </picture>
-        <h4>Categoria 2</h4>
-    </section>
-    <section>
-        <picture>
-            <img src="" alt="imagen de categoría">
-        </picture>
-        <h4>Categoria 3</h4>
-    </section>
+    <h1>Mira los productos por categoría</h1>
 </div>
-<div>
-    <h1>Comentarios</h1>
-    <article>
-        <h4>vendedor1</h4>
-        <p>comentarista: <span>comentarios blablabalbalabalbalbal</span></p>
-    </article>
-    <article>
-        <h4>vendedor2</h4>
-        <p>comentarista: <span>comentarios blablabalbalabalbalbal</span></p>
-    </article>
-    <article>
-        <h4>vendedor3</h4>
-        <p>comentarista: <span>comentarios blablabalbalabalbalbal</span></p>
-    </article>
-    <article>
-        <h4>vendedor4</h4>
-        <p>comentarista: <span>comentarios blablabalbalabalbalbal</span></p>
-    </article>
+<div class="comentarios">
+    <section>
+        <div class="users">
+            <p></p>
+        </div>
+    </section>
 </div>
 <div>
     <h1>FAQ</h1>
@@ -56,4 +25,6 @@
         </ul>
     </section>
 </div>
+<script src="../js/productsAPI.js"></script>
+<script src="../js/commentsAPI.js"></script>
 
