--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,9 @@
 <header id="top-header">
-  <span class="siteName">
-    <a href="/" title="Return to home page">CSE Motors</a>
-  </span>
-  <div id="tools">
-    <a title="Click to log in" href="/account/login">My Account</a>
-  </div>
+  <picture>
+    <img src="../images/logo-what.jpeg" alt="logo">
+  </picture>
+  <form action="">
+    <input type="text" placeholder="Busca lo que deseas">
+  </form>
+  <p>Log in</p>
 </header>
