--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,23 +8,17 @@
     <h1>Mira los productos por categoría</h1>
 </div>
 <div class="comentarios">
-    <section>
-        <div class="users">
-            <p></p>
-        </div>
-    </section>
 </div>
-<div>
+<div class="faqDiv">
     <h1>FAQ</h1>
-    <section>
+    <section class="faq">
         <ul>
-            <li><a href=""></a>Articulo 1</li>
-            <li><a href=""></a>Articulo 2</li>
-            <li><a href=""></a>Articulo 3</li>
-            <li><a href=""></a>Articulo 4</li>
+            <li><a href="">¿Cómo agregar mis productos y promocionarlos?</a></li>
+            <li><a href="">¿Tiene un costo registrarme?</a></li>
+            <li><a href="">¿Cómo envio una proforma a mis clientes?</a></li>
+            <li><a href="">¿Cómo puedo tener más alcanze y vender más?</a></li>
         </ul>
     </section>
 </div>
 <script src="../js/productsAPI.js"></script>
 <script src="../js/commentsAPI.js"></script>
-
