--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header id="top-header">
   <picture>
-    <img src="../images/logo-what.jpeg" alt="logo">
+    <img src="/images/logo-what.jpeg" alt="logo">
   </picture>
   <form action="">
     <input type="text" placeholder="Busca lo que deseas">
