--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -81,6 +81,58 @@ nav {
     height: 100%;
     object-fit: cover;
 }
+.comentarios {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+    width: 90%;
+    margin: 200px auto;
+    background: #EAF6FF;
+    border-radius: 10%;
+}
+.comentarios section {
+    width: 30%;
+    margin: 50px;
+    padding: 20px;
+    text-align: center;
+    border: 1px solid rgb(189, 184, 184);
+    position: relative;
+}
+.userInfo {
+    background: #2a2a72;
+    color:white;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+}
+.userComment {
+    margin-top: 100px;
+}
+.faqDiv h1{
+    text-align: center;
+}
+.faq ul {
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin: 50px;
+    row-gap: 40px;
+}
+.faq ul li:first-child {
+    grid-column: 1/3;    
+}
+.faq ul li:nth-child(2) {
+    grid-column: 3/5;
+}
+.faq ul li:nth-child(3) {
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+.faq ul li:last-child {
+    grid-column: 4/5;
+    grid-row: 3/4;
+}
 footer {
     display: flex;
     justify-content: center;
@@ -89,10 +141,19 @@ footer {
     background: #009ffd;
     clip-path: polygon(0% 0%, 100% 10%, 100% 100%, 0% 100%)
 }
-footer div {
-    /* width: 50%; */
-}
 .maps {
     width: 25%;
     border-radius: 50%;
+}
+
+/* product pages */
+.pro-picture {
+    display: block;
+    width: 200px;
+    height: 200px;
+}
+.pro-picture img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
