--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer>
     <div>
         <a href="">
-            <img class="maps" src="../images/maps.jpg" alt="mapa">
+            <img class="maps" src="/images/maps.jpg" alt="mapa">
         </a>
     </div>
     <div>
