--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+<div class="firstVisit"></div>
 <div class="hero-banner">
     <picture>
         <img src="../images/hero-img.jpg" alt="This is the hero banner">
@@ -22,3 +23,5 @@
 </div>
 <script src="../js/productsAPI.js"></script>
 <script src="../js/commentsAPI.js"></script>
+<script src="../js/localstorage.js"></script>
+
